org_unpackaged/standard/objects/Account.object
<CustomObject>
    <fields>
        <fullName>fn_workOrderCount__c</fullName>
        <label>Work Order Count</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Work Order</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fs_clientEmail__c</fullName>
        <label>Client Mailbox</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fs_clientOwner__c</fullName>
        <formula>IF(
   OR( 
      RecordType.DeveloperName =&quot;ES_Client&quot;,
      RecordType.DeveloperName =&quot;Rolodex&quot;
   ),
   IF(
      OR(
         ISBLANK(Account_Manager__r.Salesforce_User__c),
         ISBLANK(Account_Manager__c)
      ),
      &quot;00580000003Xfjx&quot;,
      Account_Manager__r.Salesforce_User__c
   ),
   NULL
)</formula>
        <label>Client Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_mboRecordId__c</fullName>
        <externalId>true</externalId>
        <label>MBO Company Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_owner__c</fullName>
        <formula>IF(
   AND(
       IsPersonAccount=TRUE,
       OR(
          IF(
             CASE(Associate_Status__pc,
                  &apos;Active&apos;,1,
                  &apos;Non Billing&apos;,1,
                  &apos;Probation&apos;,1,0
             ) = 1,
             TRUE,
             FALSE
          ),
          AND(
              ISPICKVAL(Associate_Status__pc, &apos;Terminated&apos;),
              fb_pracOwn__pc=TRUE,
              TODAY()-fd_bcStatusChange__pc&lt;182
          ),
          AND(
              ISPICKVAL(Associate_Status__pc, &apos;Terminated&apos;),
              fb_pracOwn__pc=FALSE,
              TODAY()-fd_bcStatusChange__pc&lt;365
          )
       )
   ),
   IF(
      OR(
         ISBLANK(Business_Manager__pr.Salesforce_User__c),
         ISBLANK(Business_Manager__pc)
      ),
      &apos;00580000003XfjxAAC&apos;,
      Business_Manager__pr.Salesforce_User__c
   ),
   IF(
      OR(
         ISBLANK(Enrollment_Manager__pr.Salesforce_User__c),
         ISBLANK(Enrollment_Manager__pc)
      ),
      &apos;00580000003XfjxAAC&apos;,
      Enrollment_Manager__pr.Salesforce_User__c
   )
)</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wMClientAccessID__c</fullName>
        <label>Work Market Client Access ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wMProjID__c</fullName>
        <label>Work Market Project ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wMWorkBench__c</fullName>
        <label>Work Market Virtual Bench ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_wmCompanyId__c</fullName>
        <label>WM Company ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>lmsilt__Active__c</fullName>
        <label>deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lmsilt__CustomerPriority__c</fullName>
        <label>deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lmsilt__NumberofLocations__c</fullName>
        <label>deprecated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lmsilt__SLAExpirationDate__c</fullName>
        <label>deprecated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lmsilt__SLASerialNumber__c</fullName>
        <label>deprecated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lmsilt__SLA__c</fullName>
        <label>deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lmsilt__UpsellOpportunity__c</fullName>
        <label>deprecated</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rs_accountExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Executive</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Accounts (Account Executive)</relationshipLabel>
        <relationshipName>account_Executive</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllActiveClients</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ES_Client</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>2d - All Client Companies</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAlumniCompanies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ES_Client</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Alumni</value>
        </filters>
        <label>2e - All Alumni Companies</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAttemptedCompanies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ES_Client</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Attempted</value>
        </filters>
        <label>2c - All Attempted Companies</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllCurrentAssociates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Associate_Number__pc</columns>
        <columns>Contact_Status__pc</columns>
        <columns>Associate_Status__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Referred_Associate,PersonAccount.Partners_Associate</value>
        </filters>
        <filters>
            <field>Associate_Status__pc</field>
            <operation>equals</operation>
            <value>Active,Non Billing,Probation</value>
        </filters>
        <label>All Associates - Current</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllMiscAssociates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Associate_Number__pc</columns>
        <columns>Contact_Status__pc</columns>
        <columns>Associate_Status__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Referred_Associate,PersonAccount.Partners_Associate</value>
        </filters>
        <filters>
            <field>Associate_Status__pc</field>
            <operation>equals</operation>
        </filters>
        <label>All Associates - Misc</label>
        <sharedTo>
            <role>Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllNegotiatingCompanies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ES_Client</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Working</value>
        </filters>
        <label>2b - All Working Companies</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllNewCompanies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ES_Client</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>2a - All New Companies</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllReEnrollingAssociates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Associate_Number__pc</columns>
        <columns>Contact_Status__pc</columns>
        <columns>Associate_Status__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Referred_Associate,PersonAccount.Partners_Associate</value>
        </filters>
        <filters>
            <field>Associate_Status__pc</field>
            <operation>equals</operation>
            <value>Enrolled,Enrolled (old),Pending,Pending (old)</value>
        </filters>
        <label>All Associates - Re-Enrolling</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllRolodex</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Rolodex</value>
        </filters>
        <label>2k - All Rolodex</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllTermedAssociates</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Associate_Number__pc</columns>
        <columns>Contact_Status__pc</columns>
        <columns>Associate_Status__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Referred_Associate,PersonAccount.Partners_Associate</value>
        </filters>
        <filters>
            <field>Associate_Status__pc</field>
            <operation>equals</operation>
            <value>Terminated</value>
        </filters>
        <label>All Associates - Termed</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AlumReenroll</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact_Status__pc</field>
            <operation>equals</operation>
            <value>Working</value>
        </filters>
        <label>Alumni and Re-enrolling</label>
        <sharedTo>
            <group>Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Alumni</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Associate_Status__pc</columns>
        <columns>Contact_Status__pc</columns>
        <columns>Sub_Status__pc</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Associate_Status__pc</field>
            <operation>equals</operation>
            <value>Terminated</value>
        </filters>
        <filters>
            <field>Associate_Type__pc</field>
            <operation>equals</operation>
            <value>MBO Exec</value>
        </filters>
        <filters>
            <field>Contact_Status__pc</field>
            <operation>equals</operation>
            <value>Alumni</value>
        </filters>
        <label>Alumni</label>
        <sharedTo>
            <group>Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Associates</fullName>
        <columns>PC_FIRST_NAME</columns>
        <columns>PC_LAST_NAME</columns>
        <columns>Sub_Status__pc</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Associate_Type__pc</columns>
        <columns>PC_EMAIL</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>PersonAccount.Client_Referred_Associate,PersonAccount.Partners_Associate</value>
        </filters>
        <label>Associates</label>
        <sharedTo>
            <group>Admin</group>
            <group>Executives</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCompanies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Activity_Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Company_Number__c</columns>
        <columns>Tier__c</columns>
        <columns>ACCOUNT.EMPLOYEES</columns>
        <columns>ACCOUNT.SALES</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.ES_Client</value>
        </filters>
        <filters>
            <field>Activity_Status__c</field>
            <operation>equals</operation>
            <value>Client</value>
        </filters>
        <label>2i - My Client Companies</label>
        <sharedTo>
            <group>CorporateStaff</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ES_Client</fullName>
        <active>true</active>
        <description>All companies MBO ES Plans to do business with</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rolodex</fullName>
        <active>true</active>
        <description>All companies MBO ES is not engaging as a client, but would like to store</description>
        <label>Rolodex</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ContactStatusReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISPICKVAL(Sub_Status__pc,&quot;Unidentified Project&quot;),
       ISPICKVAL(Sub_Status__pc,&quot;Not Qualified&quot;),
       ISPICKVAL(Sub_Status__pc,&quot;Could Not Sell&quot;)
    ),
    ISPICKVAL(fs_salesStatusReason__pc,&quot;&quot;),
    $User.Id&lt;&gt;&quot;00580000003Xfjx&quot;,
    $User.Id&lt;&gt;&quot;005C00000051k8O&quot;,
    $User.Id&lt;&gt;&quot;005C0000006HSzE&quot;
)</errorConditionFormula>
        <errorDisplayField>fs_salesStatusReason__pc</errorDisplayField>
        <errorMessage>Please select an available Sales Status Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_City</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( BillingCity ) &gt; 30,
 fb_MBO__c = TRUE)</errorConditionFormula>
        <errorDisplayField>BillingCity</errorDisplayField>
        <errorMessage>Please limit the character size to 30 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_CompanyName</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( Name ) &gt; 45,
 fb_MBO__c = TRUE)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please limit the character size to 45 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_State</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( BillingState )&gt;2</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>Please put the 2 letter abbreviation for the state prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_Street</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( BillingStreet ) &gt; 200,
 fb_MBO__c = TRUE)</errorConditionFormula>
        <errorDisplayField>BillingStreet</errorDisplayField>
        <errorMessage>Please limit the character size to 200 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBOCharLimit_Zip</fullName>
        <active>true</active>
        <errorConditionFormula>AND(LEN( BillingPostalCode ) &gt; 30,
 fb_MBO__c = TRUE)</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Please limit the character size to 30 prior to syncing to the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative</fullName>
        <active>false</active>
        <description>Requires Account.NegativeReason when Account.ActivityStatus is &quot;Negative&quot;</description>
        <errorConditionFormula>ISPICKVAL( Activity_Status__c, &quot;Negative&quot;)  &amp;&amp;    ISBLANK(Negative_reason__c)</errorConditionFormula>
        <errorDisplayField>Negative_reason__c</errorDisplayField>
        <errorMessage>Enter the reason for negative status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RequireTier</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Tier__c,&quot;&quot;),
    RecordTypeId=&apos;012C0000000Q8Eu&apos;
    )</errorConditionFormula>
        <errorDisplayField>Tier__c</errorDisplayField>
        <errorMessage>Please set a value for Tier</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Level_5_Cant_Have_Region</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Tier__c,&apos;5&apos;),
    NOT(ISPICKVAL(MBODivision__c,&apos;&apos;))
   )</errorConditionFormula>
        <errorDisplayField>MBODivision__c</errorDisplayField>
        <errorMessage>Service Level 5 Accounts Can&apos;t have a region.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubStatus</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
       ISPICKVAL(Contact_Status__pc,&quot;Alumni&quot;),
       ISPICKVAL(Contact_Status__pc,&quot;Deferred&quot;)
    ),
    ISPICKVAL(Sub_Status__pc,&quot;&quot;),
    $User.Id&lt;&gt;&quot;00580000003Xfjx&quot;,
    $User.Id&lt;&gt;&quot;005C00000051k8O&quot;,
    $User.Id&lt;&gt;&quot;005C0000006HSzE&quot;
)</errorConditionFormula>
        <errorDisplayField>Sub_Status__pc</errorDisplayField>
        <errorMessage>Please select an available Sub-status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_accountNumber</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(AccountNumber)
)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_actEngagements</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(ACTEngagements__c)
)</errorConditionFormula>
        <errorDisplayField>ACTEngagements__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_associateNumber</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED(Associate_Number__pc)
)</errorConditionFormula>
        <errorDisplayField>Associate_Number__pc</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_associateStatus</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED(Associate_Status__pc)
)</errorConditionFormula>
        <errorDisplayField>Associate_Status__pc</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_associateStatusChangeDate</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED(fd_bcStatusChange__pc)
)</errorConditionFormula>
        <errorDisplayField>fd_bcStatusChange__pc</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_associateStatusReason</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED(fs_statusReason__pc)
)</errorConditionFormula>
        <errorDisplayField>fs_statusReason__pc</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_associateType</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED(Associate_Type__pc)
)</errorConditionFormula>
        <errorDisplayField>Associate_Type__pc</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_comEngagements</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(COMEngagements__c)
)</errorConditionFormula>
        <errorDisplayField>COMEngagements__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_curAssociates</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(CURAssociates__c)
)</errorConditionFormula>
        <errorDisplayField>CURAssociates__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_dailySalesOutstanding</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(DailySalesOutstanding__c)
)</errorConditionFormula>
        <errorDisplayField>DailySalesOutstanding__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_dailySalesOutstandingCode</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(DailySalesOutstandingCode__c)
)</errorConditionFormula>
        <errorDisplayField>DailySalesOutstandingCode__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_email</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED( PersonEmail)
)</errorConditionFormula>
        <errorDisplayField>PersonEmail</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_firstName</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED( FirstName )
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_lastBillingDate</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(LastBillingDate__c)
)</errorConditionFormula>
        <errorDisplayField>LastBillingDate__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_lastName</fullName>
        <active>true</active>
        <description>Restricts updates to fields if they are managed by the MBO System sync</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          OR(
                  RecordType.Id = &apos;012C0000000Q8Ey&apos;,
                  RecordType.Id = &apos;012C0000000Q8Ex&apos;
          ),
          ISCHANGED( LastName )
)</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>This field is managed in the MBO System</errorMessage>
    </validationRules>
</CustomObject>